# object_designer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  localapp.pro  qml.qrc
resources/: Arrow.qml  Client1Panel.qml  ConnectionInput.qml  EditPopup.qml  GraphicViewer.qml  KSlider.qml  LocalBeaconTest.qml  main.qml  prog.json
src/: appcore.cpp  appcore.h  client1.cpp  client1.h  client2.cpp  client2.h  main.cpp  simplenegot.cpp  simplenegot.h  testobject.cpp  testobject.h
src/lib/: __kdynamicobject.cpp  __kdynamicobject.h  kdynamicobjectlinker.cpp  kdynamicobjectlinker.h  kobjectlifetracker.cpp  kobjectlifetracker.h  kobjectmap.cpp  kobjectmap.h  kpropertyview.cpp  kpropertyview.h  mousespy.cpp  mousespy.h  propertyintersector.cpp  propertyintersector.h
src/lib/dynamicobject/: formulaparser.cpp  formulaparser.h  jsonconfiguratedworker.cpp  jsonconfiguratedworker.h  kdynamicobject.cpp  kdynamicobject.h  kvaluesubstitute.cpp  kvaluesubstitute.h
src/sea/: acousticantenna.cpp  acousticantenna.h  antenarotor.cpp  antenarotor.h  kcustomobject.cpp  kcustomobject.h  pdfwriter.cpp  pdfwriter.h  seaenvironment.cpp  seaenvironment.h  vessel.cpp  vessel.h
src/utility/: beamtubeeffect.cpp  beamtubeeffect.h  hardwareviewermodel.cpp  hardwareviewermodel.h  linemonitor.cpp  linemonitor.h  rppainter.cpp  rppainter.h  serialization.h
